public/css/style.css
body {
    background-image: url("/background.jpg");
    background-color: #32C6DB;
}

.title{
    font-family: Futura;
    font-size: 30px;
    text-align:center
}

input[Type = text]{
    font-family: Futura;
    border: 3px solid darkblue;
    padding: 16px 32px;
    margin: 4px 2px;
    cursor: pointer;
}/*Style your own assignment! This is fun! */

#submitBtn{
    font-family: Futura;
    background-color: #359ddb;
    border: 3px solid darkblue;
    color: white;
    padding: 16px 32px;
    text-decoration: none;
    margin: 4px 4px;
    cursor: pointer;
}

table, th, td {
    border: 3px solid darkblue;
    border-collapse: collapse;
    background: white;
}

th, td {
    font-family: Futura ;
    padding: 15px;
    text-align: left;
}

#t01 {
    width: 100%;
    background-color: #f1f1c1;
}

